Revision history for Log-Abstraction

0.25
	Added is_debug for consistency with Log::Any
	Use Return::Set to assert return values within specification
	Sanitize the e-mail headers

0.24	Sat Jul 19 16:52:41 EDT 2025
	Added the ability to send an email for higher priority messages
	Only load Log::Log4perl when needed
	Deep-clone the messages array during cloning
	Map notice to info for Log::Log4perl
	Syslog facility is now configurable (default is still local0)
	Connections to the syslog are now persistent

0.23	Thu Jul 17 14:45:54 EDT 2025
	Better error message when we don't know what to do
	Allow the syslog config to say 'server' instead of 'host' for consistency with CHI

0.22	Thu Jul 17 08:22:16 EDT 2025
	Error() now sends to syslog like warn()
	Ensure undef isn't passed in the messages array to coderefs

0.21	Wed Jul 16 16:21:25 EDT 2025
	Added error()

0.20	Sun Jun 15 21:19:03 EDT 2025
	Fix GitHub#2

0.19	Tue Jun 10 08:32:28 EDT 2025
	Bump minimum version of Sys::Syslog
	More untaint checking

0.18	Fri Jun  6 15:52:27 EDT 2025
	Fix level testing

0.17	Thu May 22 14:21:14 EDT 2025
	Added the messages() method

0.16	Thu May 22 07:40:24 EDT 2025
	Handle upper case levels, such as 'INFO'

0.15	Tue May 20 21:10:23 EDT 2025
	No need to create a Log::Log4perl when sending output to a file

0.14	Tue May 20 07:44:19 EDT 2025
	Adjusted minimum version of Config::Abstraction.
		It should be 0.19 in terms of testing but it's best to use the fixes in 0.25
		RT#165420 - ANDK
	Added 'array' to the logger hash
	Introduced 'level' - minimum level to log at, defaults to 'warn'
	Fixed where to log bugs
	Check and untaint the filename

0.13	Wed May 14 08:30:53 EDT 2025
	Use '>' after level rather than ':' to files, like lower level loggers
	Try not to put the name of this package in the logfiles,
		it adds nothing apart from disc usage
	Block setting logger => Log::Abstraction in new()
	Croak if we don't know how to handle a message

0.12	Fri May  9 07:42:35 EDT 2025